--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint-fix": "eslint --fix './pages/**/*.{js,tsx}' && prettier --write './pages/**/*.{js,tsx}'"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^1.1.0",
+    "aws-amplify": "^3.4.0",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
