--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -5,8 +5,8 @@
   "javascript": {
     "framework": "react",
     "config": {
-      "SourceDir": ".",
-      "DistributionDir": "build",
+      "SourceDir": "src",
+      "DistributionDir": "out",
       "BuildCommand": "npm run-script build",
       "StartCommand": "npm run-script start"
     }
