--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint-fix": "eslint --fix './pages/**/*.{js,tsx}' && prettier --write './pages/**/*.{js,tsx}'"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^1.1.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "aws-amplify": "^3.4.0",
