--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
     "@aws-amplify/ui-react": "^1.1.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@reduxjs/toolkit": "^1.5.1",
     "aws-amplify": "^3.4.0",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-modal": "^3.13.1",
+    "react-redux": "^7.2.4",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
+    "@types/react-redux": "^7.1.16",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "babel-plugin-styled-components": "^1.12.0",
