--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.5.1",
+    "@svgr/webpack": "^5.5.0",
     "aws-amplify": "^3.4.0",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.6.2",
     "react-modal": "^3.13.1",
     "react-redux": "^7.2.4",
     "redux-persist": "^6.0.0",
