--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.5.1",
     "@svgr/webpack": "^5.5.0",
     "aws-amplify": "^3.4.0",
+    "aws-sdk": "^2.910.0",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
