--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@svgr/webpack": "^5.5.0",
     "aws-amplify": "^3.4.0",
     "aws-sdk": "^2.910.0",
+    "express": "^4.17.1",
+    "mysql2": "^2.2.5",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -23,6 +25,8 @@
     "react-modal": "^3.13.1",
     "react-redux": "^7.2.4",
     "redux-persist": "^6.0.0",
+    "sequelize": "^6.6.2",
+    "sequelize-cli": "^6.2.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
